--- a/CS/DiagramBindToList/Views/Home/Index.cshtml
+++ b/CS/DiagramBindToList/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Diagram for MVC - Node and Edge data sources - How to bind the extension to in-memory data sources";
 }
+
 @model DiagramBindToList.Models.Workflow
 
 @Html.DevExpress().Diagram(settings =>
