--- a/CS/DiagramBindToList/Views/Home/Index.cshtml
+++ b/CS/DiagramBindToList/Views/Home/Index.cshtml
@@ -14,6 +14,8 @@
     settings.Mappings.Node.Text = "Text";
     settings.Mappings.Node.Width = "Width";
     settings.Mappings.Node.Height = "Height";
+    settings.Mappings.Node.Style = "Style";
+    settings.Mappings.Node.TextStyle = "TextStyle";
 
     settings.Mappings.Edge.Key = "ID";
     settings.Mappings.Edge.FromKey = "FromID";
